# geneser

./: .gitignore  CDC.md  Cargo.toml  README.md  package-lock.json
.claude/: settings.local.json
.github/workflows/: release.yml
TEST_PROJECT/.claude/: settings.local.json
TEST_PROJECT/livre/: README.md  package.json  pubspec.yaml
TEST_PROJECT/livre/lib/: main.dart
TEST_PROJECT/livre/linux/: CMakeLists.txt
TEST_PROJECT/livre/web/: index.html
TEST_PROJECT/livre/windows/: CMakeLists.txt
livreo/: analysis_options.yaml  lefthook.yaml  package.json  pubspec.yaml
livreo/ios/Runner/: Info.plist
livreo/ios/Runner.xcodeproj/: project.pbxproj
livreo/lib/: main.dart  main_dev.dart  main_prod.dart  main_stg.dart
livreo/lib/src/: livreo_app.dart
livreo/web/: index.html  manifest.json
livreo/windows/: CMakeLists.txt
livreo/windows/runner/: main.cpp
npm/geneser/: ._install.js  install.js  package.json
npm/geneser-darwin-arm64/: package.json
npm/geneser-darwin-x64/: package.json
npm/geneser-linux-x64/: package.json
npm/geneser-windows-x64/: package.json
src/: cli.rs  main.rs
src/commands/: create.rs  list.rs  mod.rs  template.rs
src/config/: mod.rs
src/embedded/: code_with_andrea.rs  fybego.rs  josoa.rs  mod.rs
src/generators/: files.rs  flutter.rs  mod.rs  pubspec.rs  structure.rs
src/models/: fybego_options.rs  mod.rs  options.rs  template_config.rs  template_definition.rs
src/registry/: loader.rs  mod.rs
src/templates/: code_with_andrea.rs  fybego.rs  josoa.rs  mod.rs  registry.rs
test/livreo/: README.md  pubspec.yaml
(+144 files in other folders)
