[package]
name = "geneser"
version = "1.0.0"
edition = "2021"
description = "CLI tool to generate Flutter project architectures from famous templates like CodeWithAndrea"
authors = ["DASN"]

[[bin]]
name = "geneser"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1"
anyhow = "1.0.102"

[profile.release]
opt-level = 3
lto = true
strip = true
