[package]
name = "geneser"
version = "1.1.1"
edition = "2021"
description = "CLI tool to generate Flutter project architectures from famous templates like CodeWithAndrea"
authors = ["DASN"]

[[bin]]
name = "geneser"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
thiserror = "1"
anyhow = "1.0.102"
reqwest = { version = "0.11", features = ["blocking"] }
dirs = "5"
tar = "0.4"
flate2 = "1"

[profile.release]
opt-level = 3
lto = true
strip = true
